8152993: All launcher tests fail to launch in non-jigsaw legacy mode
Reviewed-by: ddhill